[package]
name = "openldap"
version = "1.0.0"
authors = ["Josh Leverette <coder543@gmail.com>", "Ross Delinger <rossdylan@csh.rit.edu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/coder543/rust-cldap"
homepage = "https://github.com/coder543/rust-cldap"
description = "Straightforward Rust bindings to the C openldap library."

[dependencies]
libc = "0.2.10"
